# prismis

./: .gitignore  API.md  CLAUDE.md  LICENSE  Makefile  README.md
cli/: pyproject.toml
cli/src/cli/: __init__.py  __main__.py  analyze.py  api_client.py  archive.py  embeddings.py  export.py  extract.py  get.py  list.py  prune.py  remote.py  report.py  search.py  source.py  statistics.py
cli/tests/: __init__.py  conftest.py
cli/tests/integration/: test_source_commands.py  test_source_validation.py
cli/tests/unit/: __init__.py  test_api_client_search_params.py  test_extract_command_unit.py  test_extract_entry_unit.py  test_url_extraction.py
daemon/: pyproject.toml  pytest.ini  test.sh
daemon/src/prismis_daemon/: __init__.py  __main__.py  analyzer.py  api.py  api_errors.py  api_models.py  audio.py  auth.py  circuit_breaker.py  config.py  context_analyzer.py  context_auto_updater.py  database.py  deep_extractor.py  defaults.py  embeddings.py  evaluator.py  llm_validator.py  locking.py  models.py  notifier.py  observability.py  orchestrator.py  reports.py  schema.sql  storage.py  summarizer.py  validator.py
daemon/src/prismis_daemon/fetchers/: __init__.py  file.py  reddit.py  rss.py  youtube.py
daemon/src/prismis_daemon/static/: index.html
daemon/tests/: __init__.py  conftest.py
daemon/tests/fixtures/: reddit_mocks.py
daemon/tests/integration/: test_analyzer_integration.py  test_api_connection_cleanup.py  test_api_content_invariants.py  test_api_entries_invariants.py  test_api_integration.py  test_audio_api_integration.py  test_config_fetcher_integration.py  test_config_integration.py  test_connection_lifecycle.py  test_content_aware_summarization_integration.py  test_content_response_api_integration.py  test_context_api.py  test_context_assistant.py  test_daemon_integration.py  test_date_filtering_integration.py  test_deep_extractor_api_integration.py  test_extract_endpoint_race.py  test_favorites_cascade.py  test_favorites_invariants.py  test_fetcher_integration.py  test_file_fetcher_integration.py  test_host_binding_integration.py  test_html_report_formatting_integration.py  test_llm_startup_validation_integration.py  test_notifier_integration.py  test_reddit_fetcher_integration.py  test_search_min_score_integration.py  test_storage.py  test_storage_deduplication_integration.py  test_storage_dict_interface.py  test_summarizer_evaluator_integration.py  test_validator_integration.py  test_youtube_fetcher_integration.py
daemon/tests/unit/: test_analyzer_unit.py  test_circuit_breaker_unit.py  test_config_migration_unit.py  test_config_unit.py  test_content_aware_summarization_unit.py  test_content_response_model_unit.py  test_date_filtering_unit.py  test_deep_extractor_unit.py  test_dep_pin_unit.py  test_dual_service_config_unit.py  test_evaluator_unit.py  test_fetcher_unit.py  test_file_fetcher_unit.py  test_host_config_security.py  test_html_report_formatting_unit.py  test_llm_core_migration_unit.py  test_llm_startup_validation_unit.py  test_models.py  test_notifier_unit.py  test_orchestrator_deep_unit.py  test_reddit_fetcher_unit.py  test_rfc3339_helper_unit.py  test_rfc3339_overload_stubs_unit.py  test_search_min_score_unit.py  test_source_request_validator_unit.py  test_storage_deduplication_unit.py  test_storage_dict_unit.py  test_storage_feedback_stats_unit.py  test_storage_validation.py  test_summarizer_unit.py  test_utcnow_fix_unit.py  test_validator_unit.py  test_validator_youtube_protocol_unit.py  test_verify_subcommand_unit.py  test_web_click_delegation_unit.py  test_youtube_fetcher_unit.py
docs/: FEEDBACK_LOOP_SPEC.md
docs/architecture/: architecture.md  boundaries.md  briefing.md  components.md  decisions.md  manifest.md
scripts/: com.prismis.daemon.plist
tui/: go.mod  go.sum  test_integration.go
tui/cmd/demo/: main.go
(+53 files in other folders)
