[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismis-daemon"
version = "0.2.0"
description = "Prismis daemon for content fetching and analysis"
requires-python = ">=3.13"
dependencies = [
    "apscheduler",
    "cryptography",
    "fastapi>=0.116.1",
    "feedparser",
    "httpx",
    "llm-core>=0.1.0",
    "praw>=7.8.1",
    "pydantic",
    "python-dotenv",
    "rich",
    "sentence-transformers>=2.0.0",
    "sqlite-vec>=0.1.0",
    "trafilatura",
    "typer",
    "uvicorn>=0.35.0",
]

[project.scripts]
prismis-daemon = "prismis_daemon.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prismis_daemon"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.ruff.lint.per-file-ignores]
"src/prismis_daemon/api.py" = ["B008"]  # FastAPI Depends() in argument defaults
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

# Git dependencies are pinned to specific commits validated at iteration boundaries.
# `uv tool install --reinstall` (used by `make install-daemon`) bypasses the lockfile
# for git sources, so source-level `rev=` pins are required, not optional — without
# them the resolver silently advances to the remote HEAD on every reinstall.
#
# To bump a pinned dep: update `rev=` to the new commit, run `uv lock` from this
# directory, and commit pyproject.toml + uv.lock together with a message naming
# the new rev (INV-DEP-3). This makes the bump deliberate and visible in git log.
[tool.uv.sources]
llm-core = { git = "https://github.com/nickpending/llm-core", subdirectory = "python", rev = "2eb4429" }
